add_subdirectory(addon)
add_subdirectory(cosima)
add_subdirectory(eview)
add_subdirectory(fretalon)
add_subdirectory(geomega)
add_subdirectory(mimrec)
add_subdirectory(realta)
add_subdirectory(response)
add_subdirectory(revan)
add_subdirectory(sivan)
add_subdirectory(spectralyze)
file(GLOB GLOBAL global/gui/src/*.cxx)
include_directories(global/gui/inc)
add_library(global ${GLOBAL})
