cmake_minimum_required(VERSION 3.27)
#file(GLOB GLOBAL global/gui/src/*.cxx)
#file(GLOB WEEWOO global/misc/src/*.cxx)


add_subdirectory(global)
add_subdirectory(geomega)
add_subdirectory(addon)
add_subdirectory(cosima)
add_subdirectory(eview)
add_subdirectory(fretalon)
add_subdirectory(mimrec)
add_subdirectory(realta)
add_subdirectory(response)
add_subdirectory(revan)
add_subdirectory(sivan)
add_subdirectory(spectralyze)